fin html, text align,...

--- a/informations.html
+++ b/informations.html
@@ -16,7 +16,7 @@
 
 <body class="infos">
 <header>
-    <a href>"index.html"
+    <a href="index.html">
     <div>Laure Dinateur</div>
     <div>Graphiste</div>
     </a>
@@ -30,6 +30,7 @@
 
 </header>
 
+<img class="image" src="_sources/images/laure-dinateur-graphiste.jpg" alt="Laure Dinateur"/>
 <!-- Titre principal (unique) de la page -->
 <h1>Laure Dinateur Présentation</h1>
 <!-- Un paragraphe -->
@@ -39,5 +40,8 @@
 <p>Vous pouvez me suivre sur Twitter, mon nom d'utilisateur est
     <a href="https://twitter.com/lauredi">@lauredi.</a></p>
 </body>
-<footer></footer>
+<footer>
+    <a href="https://www.facebook.com/laure.dinateur"><img src="_sources/images/facebook-draw.png" alt="logo facebook">
+        <a href="@lauredi - https://twitter.com/lauredi"><img src="_sources/images/twitter-draw.png" alt="logo twitter">
+</footer>
 </html>
