responsive 3 colonnes Accueil.html

--- a/informations.html
+++ b/informations.html
@@ -16,13 +16,13 @@
 
 <body class="infos">
 <header>
-    <a href="index.html">
+    <a href="Accueil.html">
     <div>Laure Dinateur</div>
     <div>Graphiste</div>
     </a>
     <nav>
     <ul>
-        <li><a href="index.html">Accueil</a></li>
+        <li><a href="Accueil.html">Accueil</a></li>
         <li><a href="informations.html">Qui suis-je</a></li>
         <li><a href="contact.html">Me contacter</a></li>
     </ul>
@@ -30,7 +30,7 @@
 
 </header>
 
-<img class="image" src="_sources/images/laure-dinateur-graphiste.jpg" alt="Laure Dinateur"/>
+<img class="image" src="img/laure-dinateur-graphiste.jpg" alt="Laure Dinateur"/>
 <!-- Titre principal (unique) de la page -->
 <h1>Laure Dinateur Présentation</h1>
 <!-- Un paragraphe -->
@@ -41,7 +41,7 @@
     <a href="https://twitter.com/lauredi">@lauredi.</a></p>
 </body>
 <footer>
-    <a href="https://www.facebook.com/laure.dinateur"><img src="_sources/images/facebook-draw.png" alt="logo facebook">
-        <a href="@lauredi - https://twitter.com/lauredi"><img src="_sources/images/twitter-draw.png" alt="logo twitter">
+    <a href="https://www.facebook.com/laure.dinateur"><img src="img/facebook-draw.png" alt="logo facebook">
+        <a href="@lauredi - https://twitter.com/lauredi"><img src="img/twitter-draw.png" alt="logo twitter">
 </footer>
 </html>
